--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Заголовок страницы в браузере -->
 	<title>Template</title>
 	<!-- Подключаем CSS -->
-	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="css/style.css" />
 	<!--Conect font's-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,7 +77,7 @@
 
 		<main class="main">
 			<section class="main__finance finance">
-				<div class="finance__bg-image -ibg"><img src="/img/cover.png" alt="Man width woman"></div>
+				<div class="finance__bg-image -ibg"><img src="img/cover.png" alt="Man width woman"></div>
 				<div class="finance__container">
 					<div class="finance__body body-finance">
 						<div class="body-finance__title">
@@ -102,7 +102,7 @@
 
 						<div class="services__column">
 							<div class="services__item item-services">
-								<div class="item-services__icon"><img src="/img/icons/box1.svg" alt="Services Icon"></div>
+								<div class="item-services__icon"><img src="img/icons/box1.svg" alt="Services Icon"></div>
 								<div class="item-services__title">
 									<h3>Environmental
 										Consulting</h3>
@@ -116,7 +116,7 @@
 
 						<div class="services__column">
 							<div class="services__item item-services">
-								<div class="item-services__icon"><img src="/img/icons/box2.svg" alt="Services Icon"></div>
+								<div class="item-services__icon"><img src="img/icons/box2.svg" alt="Services Icon"></div>
 								<div class="item-services__title">
 									<h3>Finance and
 										consultancy </h3>
@@ -130,7 +130,7 @@
 
 						<div class="services__column">
 							<div class="services__item item-services item-services-green">
-								<div class="item-services-green__icon item-services__icon"><img src="/img/icons/box3.svg"
+								<div class="item-services-green__icon item-services__icon"><img src="img/icons/box3.svg"
 										alt="Services Icon"></div>
 								<div class="item-services-green__title item-services__title">
 									<h3>Financial Services
@@ -163,7 +163,7 @@
 						<div class="statistic__columns columns-statistic">
 
 							<div class="columns-statistic__column">
-								<div class="columns-statistic__icon"><img src="/img/icons/statistic-icon1.svg"
+								<div class="columns-statistic__icon"><img src="img/icons/statistic-icon1.svg"
 										alt="statistic Icon"></div>
 								<div class="columns-statistic__title">
 									<h3>972 +</h3>
@@ -174,7 +174,7 @@
 							</div>
 
 							<div class="columns-statistic__column">
-								<div class="columns-statistic__icon"><img src="/img/icons/statistic-icon2.svg"
+								<div class="columns-statistic__icon"><img src="img/icons/statistic-icon2.svg"
 										alt="statistic Icon"></div>
 								<div class="columns-statistic__title">
 									<h3>181 +</h3>
@@ -185,7 +185,7 @@
 							</div>
 
 							<div class="columns-statistic__column">
-								<div class="columns-statistic__icon"><img src="/img/icons/statistic-icon3.svg"
+								<div class="columns-statistic__icon"><img src="img/icons/statistic-icon3.svg"
 										alt="statistic Icon"></div>
 								<div class="columns-statistic__title">
 									<h3>98%</h3>
@@ -196,7 +196,7 @@
 							</div>
 
 							<div class="columns-statistic__column">
-								<div class="columns-statistic__icon"><img src="/img/icons/statistic-icon4.svg"
+								<div class="columns-statistic__icon"><img src="img/icons/statistic-icon4.svg"
 										alt="statistic Icon"></div>
 								<div class="columns-statistic__title">
 									<h3>746 +</h3>
@@ -239,7 +239,7 @@
 											was discovered </p>
 									</div>
 								</div>
-								<div class="columns-practice__image"><img src="/img/practice/content-image1.png"
+								<div class="columns-practice__image"><img src="img/practice/content-image1.png"
 										alt="Card Content Image"></div>
 							</div>
 
@@ -255,7 +255,7 @@
 											behaviour of matter</p>
 									</div>
 								</div>
-								<div class="columns-practice__image"><img src="/img/practice/content-image2.png"
+								<div class="columns-practice__image"><img src="img/practice/content-image2.png"
 										alt="Card Content Image"></div>
 							</div>
 
@@ -271,7 +271,7 @@
 											bodies moving</p>
 									</div>
 								</div>
-								<div class="columns-practice__image"><img src="/img/practice/content-image3.png"
+								<div class="columns-practice__image"><img src="img/practice/content-image3.png"
 										alt="Card Content Image"></div>
 							</div>
 
@@ -287,7 +287,7 @@
 											of the behaviour </p>
 									</div>
 								</div>
-								<div class="columns-practice__image"><img src="/img/practice/content-image4.png"
+								<div class="columns-practice__image"><img src="img/practice/content-image4.png"
 										alt="Card Content Image"></div>
 							</div>
 
@@ -310,8 +310,8 @@
 
 					<div class="whoweare__content content-whoweare">
 						<div class="content-whoweare__video">
-							<video muted controls preload="metadata" poster="/img/poster-video.png">
-								<source src="/img/video.mp4" type="video/mp4">
+							<video muted controls preload="metadata" poster="img/poster-video.png">
+								<source src="img/video.mp4" type="video/mp4">
 							</video>
 						</div>
 
@@ -330,7 +330,7 @@
 							</div>
 
 							<div class="inform-whoweare__item item-inform-whoweare">
-								<div class="item-inform-whoweare__image"><img src="/img/icons/whoweare-icon1.svg" alt="Icon">
+								<div class="item-inform-whoweare__image"><img src="img/icons/whoweare-icon1.svg" alt="Icon">
 								</div>
 								<div class="item-inform-whoweare__text">
 									<div class="item-inform-whoweare__title">
@@ -343,7 +343,7 @@
 								</div>
 							</div>
 							<div class="inform-whoweare__item item-inform-whoweare">
-								<div class="item-inform-whoweare__image"><img src="/img/icons/whoweare-icon2.svg" alt="Icon">
+								<div class="item-inform-whoweare__image"><img src="img/icons/whoweare-icon2.svg" alt="Icon">
 								</div>
 								<div class="item-inform-whoweare__text">
 									<div class="item-inform-whoweare__title">
@@ -363,12 +363,12 @@
 			<section class="main__subscribe subscribe">
 				<div class="subscribe__container">
 					<div class="subscribe__body">
-						<div class="subscribe__item"><img src="/img/subscribe/01.svg" alt="Partners Logo"></div>
-						<div class="subscribe__item"><img src="/img/subscribe/02.svg" alt="Partners Logo"></div>
-						<div class="subscribe__item"><img src="/img/subscribe/03.svg" alt="Partners Logo"></div>
-						<div class="subscribe__item"><img src="/img/subscribe/04.svg" alt="Partners Logo"></div>
-						<div class="subscribe__item"><img src="/img/subscribe/05.svg" alt="Partners Logo"></div>
-						<div class="subscribe__item"><img src="/img/subscribe/06.svg" alt="Partners Logo"></div>
+						<div class="subscribe__item"><img src="img/subscribe/01.svg" alt="Partners Logo"></div>
+						<div class="subscribe__item"><img src="img/subscribe/02.svg" alt="Partners Logo"></div>
+						<div class="subscribe__item"><img src="img/subscribe/03.svg" alt="Partners Logo"></div>
+						<div class="subscribe__item"><img src="img/subscribe/04.svg" alt="Partners Logo"></div>
+						<div class="subscribe__item"><img src="img/subscribe/05.svg" alt="Partners Logo"></div>
+						<div class="subscribe__item"><img src="img/subscribe/06.svg" alt="Partners Logo"></div>
 					</div>
 				</div>
 			</section>
@@ -409,7 +409,7 @@
 					<div class="touch__content">
 						<div class="touch__column column-touch">
 							<div class="column-touch__body">
-								<div class="column-touch__icon"><img src="/img/touch/01.svg" alt="Phone Icon"></div>
+								<div class="column-touch__icon"><img src="img/touch/01.svg" alt="Phone Icon"></div>
 								<div class="column-touch__mail">
 									<a href="#">georgia.young@example.com</a>
 									<a href="#">georgia.young@ple.com</a>
@@ -425,7 +425,7 @@
 
 						<div class="touch__column column-touch column-touch-center">
 							<div class="column-touch__body column-touch-center__body">
-								<div class="column-touch__icon column-touch-center__icon"><img src="/img/touch/02.svg"
+								<div class="column-touch__icon column-touch-center__icon"><img src="img/touch/02.svg"
 										alt="Phone Icon"></div>
 								<div class="column-touch__mail column-touch-center__mail">
 									<a href="#">georgia.young@example.com</a>
@@ -442,7 +442,7 @@
 
 						<div class="touch__column column-touch">
 							<div class="column-touch__body">
-								<div class="column-touch__icon"><img src="/img/touch/03.svg" alt="Phone Icon"></div>
+								<div class="column-touch__icon"><img src="img/touch/03.svg" alt="Phone Icon"></div>
 								<div class="column-touch__mail">
 									<a href="#">georgia.young@example.com</a>
 									<a href="#">georgia.young@ple.com</a>
@@ -534,15 +534,15 @@
 						<lable class="footer-top__lable">Get In Touch</lable>
 						<div class="footer-top__contacts contacts-footer-top">
 							<div class="contacts-footer-top__item">
-								<img src="/img/icons/footer01.svg" alt="Phone Number">
+								<img src="img/icons/footer01.svg" alt="Phone Number">
 								<a href="tell:4805550103">(480) 555-0103</a>
 							</div>
 							<div class="contacts-footer-top__item">
-								<img src="/img/icons/footer02.svg" alt="Phone Number">
+								<img src="img/icons/footer02.svg" alt="Phone Number">
 								<a target="_blank" href="https://goo.gl/maps/s3GdJkCLrm6KnLQE9">4517 Washington Ave.</a>
 							</div>
 							<div class="contacts-footer-top__item">
-								<img src="/img/icons/footer03.svg" alt="Phone Number">
+								<img src="img/icons/footer03.svg" alt="Phone Number">
 								<a target="_blank" href="mailto:debra.holt@example.com">debra.holt@example.com</a>
 							</div>
 						</div>
@@ -558,10 +558,10 @@
 						<p>Made With Love By Figmaland All Right Reserved </p>
 					</div>
 					<div class="footer-bottom__social">
-						<a href="#"><img src="img/icons/footer-facebook.svg" alt="Facebook link"></a>
-						<a href="#"><img src="img/icons/footer-instagram.svg" alt="Instagram Link"></a>
-						<a href="#"><img src="img/icons/footer-twitter.svg" alt="Twitter Link"></a>
-						<a href="#"><img src="img/icons/footer-youtube.svg" alt="Youtube Link"></a>
+						<a href="#"><img src="imgicons/footer-facebook.svg" alt="Facebook link"></a>
+						<a href="#"><img src="imgicons/footer-instagram.svg" alt="Instagram Link"></a>
+						<a href="#"><img src="imgicons/footer-twitter.svg" alt="Twitter Link"></a>
+						<a href="#"><img src="imgicons/footer-youtube.svg" alt="Youtube Link"></a>
 					</div>
 				</div>
 			</div>
@@ -573,7 +573,7 @@
 	<!--Підключаєм бібліотеку jQuery-->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 	<!--Підключаєм файл JS-->
-	<script src="/js/scrypt.js"></script>
+	<script src="js/scrypt.js"></script>
 </body>
 
 
