--- a/index.html
+++ b/index.html
@@ -558,10 +558,10 @@
 						<p>Made With Love By Figmaland All Right Reserved </p>
 					</div>
 					<div class="footer-bottom__social">
-						<a href="#"><img src="imgicons/footer-facebook.svg" alt="Facebook link"></a>
-						<a href="#"><img src="imgicons/footer-instagram.svg" alt="Instagram Link"></a>
-						<a href="#"><img src="imgicons/footer-twitter.svg" alt="Twitter Link"></a>
-						<a href="#"><img src="imgicons/footer-youtube.svg" alt="Youtube Link"></a>
+						<a href="#"><img src="img/icons/footer-facebook.svg" alt="Facebook link"></a>
+						<a href="#"><img src="img/icons/footer-instagram.svg" alt="Instagram Link"></a>
+						<a href="#"><img src="img/icons/footer-twitter.svg" alt="Twitter Link"></a>
+						<a href="#"><img src="img/icons/footer-youtube.svg" alt="Youtube Link"></a>
 					</div>
 				</div>
 			</div>
