--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <head>
 	<!-- Заголовок страницы в браузере -->
-	<title>Template</title>
+	<title>Relvise</title>
 	<!-- Подключаем CSS -->
 	<link rel="stylesheet" href="css/style.css" />
 	<!--Conect font's-->
