--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 		<main class="main">
 			<section class="main__finance finance">
-				<div class="finance__bg-image -ibg"><img src="img/cover.png" alt="Man width woman"></div>
+				<div class="finance__bg-image ibg"><img src="img/cover.png" alt="Man width woman"></div>
 				<div class="finance__container">
 					<div class="finance__body body-finance">
 						<div class="body-finance__title">
